# Demand_Cast_Forecasting_Model

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-serving.txt  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
config/: pipeline.yaml
config/models/: lightgbm.yaml  lstm.yaml
dbt/demandcast/: dbt_project.yml  profiles.yml.example
dbt/demandcast/models/marts/: _marts.yml  fct_sales.sql
dbt/demandcast/models/staging/: _sources.yml  _staging.yml  stg_store.sql  stg_train.sql
knowledge/: architecture.md  metrics.md  models.md
models/: lightgbm_export.txt
reports/: model_comparison.csv  model_comparison.md
src/demandcast/: registry.py
src/demandcast/agent/: agent.py  guardrails.py  knowledge.py  tools.py  vectorstore.py
src/demandcast/config/: __init__.py  schema.py
src/demandcast/dashboard/: app.py  requirements.txt
src/demandcast/data/: __init__.py  loader.py
src/demandcast/evaluation/: metrics.py  run_comparison.py  splits.py
src/demandcast/features/: __init__.py  engineering.py
src/demandcast/ingestion/: download_rossmann.py
src/demandcast/models/: baselines.py  deep.py  ml.py  statistical.py
src/demandcast/monitoring/: drift.py
src/demandcast/serving/: inference.py  main.py  schemas.py
src/demandcast/training/: config.py  train.py
src/demandcast/validation/: __init__.py  expectations.py
tests/: test_agent.py  test_agent_tools.py  test_baselines.py  test_config.py  test_deep.py  test_drift.py  test_engineering.py  test_guardrails.py  test_knowledge.py  test_metrics.py  test_ml.py  test_registry.py  test_serving.py  test_splits.py  test_statistical.py  test_training_config.py  test_validation.py  test_vectorstore.py
