[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demandcast"
version = "0.1.0"
description = "Production-grade demand forecasting and AI insights platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "duckdb>=1.0",
    "dbt-core>=1.8",
    "dbt-duckdb>=1.8",
    "kaggle>=1.6",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "prophet>=1.1",
    "lightgbm>=4.3",
    "torch>=2.3",
    "matplotlib>=3.9",
    "tabulate>=0.9",
    "mlflow>=3.0",
    "great-expectations>=1.0",
    "evidently>=0.7",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's Depends(...) in argument defaults is the framework's intended
# pattern, not the mutable-default-argument bug B008 normally catches.
"src/demandcast/serving/main.py" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
